Fix for the (almost) black-on-black text in listings issue.
We had a rule that set listing text to a color of 222 against a black background. That was unreadable. I removed the 222 color in code listing blocks.

--- a/src/main/sass/spring/_asciidoctor.scss
+++ b/src/main/sass/spring/_asciidoctor.scss
@@ -805,7 +805,6 @@ table.tableblock #preamble > .sectionbody > .paragraph:first-of-type p {
 .literalblock pre, .listingblock pre:not(.highlight), .listingblock pre[class="highlight"], .listingblock pre[class^="highlight "], .listingblock pre.CodeRay, .listingblock pre.prettyprint {
   background: #fff;
   border: 1px solid #d9d9d9;
-  color: #222;
   border-radius: 4px;
 }
 
